# findrepo2-experiment

./: .gitattributes  .gitignore  Pipfile  README.md  embedding.ipynb  embeddings-c5e7a088e88de307e7076d8e19ef5913-old.msgpack  embeddings-c5e7a088e88de307e7076d8e19ef5913.msgpack  environment.yml  main.ipynb  moderation-62402eae8ba6d784fa00aca9218ff5dd.msgpack  precompute.ipynb  pricing.ipynb  pyproject.toml  tokens.ipynb
.devcontainer/: devcontainer.json  postCreate  postStart
.github/: dependabot.yml
.github/workflows/: codeql.yml  flake8.yml  markdown-links.yml  pyright.yml  shellcheck.yml
data/: embeddings-12cbd54fb78032903ebe0159e2d29271.msgpack  embeddings-306cd3bd49c2fc3551a4a0452185f920.msgpack  embeddings-c5e7a088e88de307e7076d8e19ef5913-old.msgpack  embeddings-c5e7a088e88de307e7076d8e19ef5913.msgpack  moderation-0bf74709c0f7e94d2ee12d23638f04e3.msgpack  moderation-12cbd54fb78032903ebe0159e2d29271.msgpack  moderation-1c3d062a9f37e1a60dd69c09ca73ae6a.msgpack  moderation-21e46804d1bbf27b22dc2522c974fa30.msgpack  moderation-306cd3bd49c2fc3551a4a0452185f920.msgpack  moderation-65a0a8a243a087acdb6b50404c27df08.msgpack  moderation-713d847b090bb941d22406beecff1c77.msgpack  moderation-77f6ae7d040b11e7249a7e32eabd066a.msgpack  moderation-873e13751e1e292dac04387a12eab44e.msgpack  moderation-8cc380b94f85e37f4f5b0ee1e4b6f9eb.msgpack  moderation-9ae55d8b93f1ee1bb9ff1c818f47e525.msgpack  moderation-a1db33fdef3cf88c936613c61c976322.msgpack  moderation-f76c4c727d1ab4fb86a44342c65ba7f8.msgpack
fr2ex/: __init__.py  _apiutil.py  _task.py  embedding.py  moderation.py  paths.py  remote.py  tokens.py
notebooks/: embedding.ipynb  main.ipynb  pricing.ipynb  tokens.ipynb
