[tool.poetry]
name = "findrepo2-experiment"
version = "0.1.0"
description = ""
authors = ["Eliah Kagan <degeneracypressure@gmail.com>"]
license = "0BSD"
readme = "README.md"
packages = [{include = "fr2ex"}]

[tool.poetry.dependencies]
python = "~3.11"
attrs = "^25.3.0"
beautifulsoup4 = "^4.13.4"
blake3 = "^1.0.5"
colorama = "^0.4.6"
fabric = "^3.2.2"
html5lib = "^1.1"
ipykernel = "^6.29.5"
lxml = "^5.4.0"
more-itertools = "^10.7.0"
msgpack-numpy = "^0.4.8"
msgpack-python = "^0.5.6"
nptyping = "^2.5.0"
numpy = "^1.26.4"
openai = {extras = ["embeddings"], version = "^0.28.1"}
pandas = "^2.3.0"
requests = "^2.32.4"
tabulate = "^0.9.0"
tiktoken = "^0.9.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
mypy = "^1.16.1"
pylint = "^3.3.7"
pyright = "^1.1.402"
types-beautifulsoup4 = "^4.12.0.20250516"
types-colorama = "^0.4.15.20240311"
types-requests = "^2.32.4.20250611"


[tool.poetry.group.notebook.dependencies]
ipython = "^9.3.0"
jupyterlab = "^4.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
