[tool.poetry]
name = "findrepo2-experiment"
version = "0.1.0"
description = ""
authors = ["Eliah Kagan <degeneracypressure@gmail.com>"]
license = "0BSD"
readme = "README.md"
packages = [{include = "fr2ex"}]

[tool.poetry.dependencies]
python = "~3.11"
attrs = "^25.3.0"
beautifulsoup4 = "^4.14.2"
blake3 = "^1.0.7"
colorama = "^0.4.6"
fabric = "^3.2.2"
html5lib = "^1.1"
ipykernel = "^6.30.1"
lxml = "^6.0.2"
more-itertools = "^10.8.0"
msgpack-numpy = "^0.4.8"
msgpack-python = "^0.5.6"
nptyping = "^2.5.0"
numpy = "^1.26.4"
openai = {extras = ["embeddings"], version = "^0.28.1"}
pandas = "^2.3.3"
requests = "^2.32.5"
tabulate = "^0.9.0"
tiktoken = "^0.11.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
mypy = "^1.18.2"
pylint = "^3.3.8"
pyright = "^1.1.405"
types-beautifulsoup4 = "^4.12.0.20250516"
types-colorama = "^0.4.15.20250801"
types-requests = "^2.32.4.20250913"


[tool.poetry.group.notebook.dependencies]
ipython = "^9.6.0"
jupyterlab = "^4.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
